apps/web/kubernetes/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: norma
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: prod
  tls:
    - hosts:
        - norma.hendrywilliam.com
      secretName: letsencrypt-prod
  rules:
    - host: norma.hendrywilliam.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 3000
